<resources>

    <string name="app_name">Yo No Desperdicio</string>
    <string name="web_url">http://yonodesperdicio.org/</string>
    <string name="default_notification_channel_id">yonodesperdicio</string>
    <string name="default_notification_channel_description">Notificaciones Yo No Desperdicio</string>


    <string name="navigation_drawer_open">Abrir menu lateral</string>
    <string name="navigation_drawer_close">Cerrar menu lateral</string>

    <string name="action_settings">Opciones</string>

    <string name="main_search_title">Buscar</string>
    <string name="main_add_title">Nuevo</string>
    <string name="main_delete_database">Delete database</string>
    <string name="save">Save</string>
    <string name="email_address">email address</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="search_title">Enter name</string>
    <string name="add_ad_title">Add Ad</string>
    <string name="edit_ad_title">edit_ad_title</string>
    <string name="search_ad_title">search_ad_title</string>
    <string name="user_name">Nombre de usuario</string>

    <string name="title_activity_base">Base</string>
    <string name="title_activity_settigns">Acerca de</string>
    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_maps">Map;</string>
    <string name="title_activity_messages">Mensajes</string>
    <string name="title_activity_messages_chat">Chat</string>
    <string name="title_activity_favorites">Favoritos</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <string name="save_fav">Guardar como favorito</string>

    <string name="texto_caritas">texto ramdom intetne añadir caras unicode pero no</string>

    <string name="edit_location">Editar ubicación</string>
    <string name="edit_wallpic">Cambiar foto de portada</string>
    <string name="edic_avatarpic">Cambiar foto de perfil</string>
    <string name="edic_name">Modificar nombre</string>

    <string name="description_ad_image">imagen del anuncio</string>

    <string name="label_title">Título</string>
    <string name="label_weight">Cantidad (Kg)</string>
    <string name="label_expiration_date">Fecha límite de recogida</string>
    <string name="label_expiration_time">Hora</string>
    <string name="label_city">Ciudad</string>
    <string name="label_postal_code">Codigo Postal</string>
    <string name="label_ad_description">Descripcion del anuncio, añade un comentario</string>

    <string name="action_done">Hecho</string>
    <string name="delete_ad">Eliminar Anuncio</string>

    <!-- User -->
    <string name="user_auth_message">Validando credenciales, espere…</string>
    <string name="user_create_message">Creando cuenta, espere…</string>

    <!-- Ad -->
    <string name="ad_create_message">Creando anuncio, espere…</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Logo de Google</string>

    <string name="title_text">CONTINUAR CON GOOGLE</string>

    <string name="loading">Cargando…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">SESIÓN INICIADA\n\n%s</string>
    <string name="signed_in">Ingresar</string>
    <string name="signing_in">Ingresando…</string>
    <string name="signed_out">SESIÓN NO INICIADA</string>
    <string name="signed_in_err">"Error: please check logs."</string>

    <!-- Button labels -->
    <string name="sign_out">Cerrar Sesión</string>
    <string name="disconnect">Revocar</string>
    <string name="sign_in_continue">Continuar</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Volley Error -->
    <string name="volley_error_timeout">Agotado el tiempo de conexión con el backend.</string>
    <string name="volley_error_no_internet">No hay conexión a Internet.</string>
    <string name="volley_error_generic">No se ha podido completar con éxito la petición.</string>

    <string name="chat_input_hint">Escribe aqui tu mensaje</string>
    <string name="menu_refresh">Actualizar</string>
    <string name="menu_order_distance">Ordenar por distancia</string>
    <string name="menu_force_update_gps">Actualizar mi ubicación</string>
    <string name="menu_delete_all_favorites">Borrar todos</string>

    <string name="delete_all_favorites_message">Esta seguro de querer borrar los favoritos</string>


    <!-- Fecth Address Intent Service Strings-->
    <string name="service_not_available">Servicio no disponible</string>
    <string name="invalid_lat_long_used">Coordenadas invalidas</string>
    <string name="invalid_location">Sin localización</string>
    <string name="no_address_found">No se encontro localización</string>
    <string name="address_found">Encontrada localización</string>
    <string name="no_geocoder_available">geocoder no disponible</string>
    <string name="no_location_data_provided">No hay datos de localización</string>


    <!-- Profile -->
    <string name="entregados">"Entregados "</string>
    <string name="camera">Camara</string>
    <string name="gallery">Fotos</string>
    <string name="pic_from_where">¿Desde donde quieres obtener la foto?</string>
    <string name="Picture">Foto</string>


    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
    <string name="change_location">Cambiar localización</string>
    <string name="enter_postal_code">Introduce tu codigo postal, si tienes la geolocalización activada se escribira el codigo de tu ubicación actual</string>

    <string name="are_you_sure">¿Estas seguro?</string>
    <string name="lost_data">Si sales perderas los cambios</string>
    <string name="delete_ad_msg">¿Quieres eliminar este anuncio?</string>
    <string name="about_prosalus">Prosalus es una organización no gubernamental de cooperación al
        desarrollo (ONGD) cuya misión es promover el respeto, protección y garantía de los derechos
        humanos a la alimentación, a la salud y al agua y saneamiento. Una de las líneas de trabajo
        de Prosalus está relacionada con el reconocimiento del derecho a la alimentación y un
        aspecto importante es la disminución del desperdicio de alimentos. Siguiendo la filosofía
        colaborativa, ponemos en marcha esta red que facilita el intercambio y la reducción del
        desperdicio. Esta iniciativa cuenta con el apoyo de Territorios Solidarios de BBVA y con la
        colaboración del Centro de Innovación en Tecnología para el Desarrollo Humano (itdUPM).
    </string>
    <string name="credits2">Diseño sitio web: Estudio Blg\nDesarrollo web y API: Punto
        Abierto\nDiseño y desarrollo de la APP: Freepress S. Coop.
    </string>
    <string name="mark_booked">Reservado</string>
    <string name="mark_delivered">Entregado</string>
    <string name="preference_fbt">firebase_token</string>
    <string name="compartir">Compartir</string>
    <string name="accept">Aceptar</string>
    <string name="No_permission_files">No se ha permitido cargar archivos</string>
    <string name="ofertas">Ofertas</string>
    <string name="anuncios">Anuncios</string>
    <string name="favoritos">Favoritos</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="mensajes">Mensajes</string>
    <string name="m_s_info">Más Info</string>
    <string name="ajustes">Ajustes</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="title_activity_offer_create">OfferCreateActivity</string>
    <string name="store">Establecimiento</string>
    <string name="offer_description">Descripción de la oferta, añade tu comentario</string>
    <string name="offer_address">Dirección</string>
    <string name="borrar_oferta">Borrar Oferta</string>
    <string name="delete_offer_msg">¿Quieres eliminar esta oferta?</string>

    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">@string/google_maps_key</string>-->


</resources>
