<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.MainActivity">

    <!--<item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>-->
    <item
        android:id="@+id/menu_refresh"
        app:showAsAction="never"
        android:title="@string/menu_refresh"
        />
    <item
        android:id="@+id/menu_order_distance"
        app:showAsAction="never"
        android:title="@string/menu_order_distance"
        />
    <item
        android:id="@+id/menu_force_update_gps"
        app:showAsAction="never"
        android:title="@string/menu_force_update_gps"
        />
</menu>
