<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="17dp">

    <EditText
        android:id="@+id/adTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/adBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"/>

    <EditText
        android:id="@+id/adUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adType"/>


    <EditText
        android:id="@+id/adWoeid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adDateCreated"
        android:layout_gravity="center_horizontal"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adStatus"/>


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Switch"
        android:id="@+id/adCommentsEnabled"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Switch"
        android:id="@+id/adFavorite"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        />



</LinearLayout>
</ScrollView>
